fix app on small phone screen

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@
     text-align: center;
 }
 #title-desc{
-    width: 375px;
+    max-width: 375px;
+    min-width: 100px;
     margin: 0 auto;
     position: relative;
     top: 78px;
@@ -41,7 +42,8 @@
 
 }
 #title-desc-2{
-    width: 375px;
+    max-width: 375px;
+    min-width: 100px;
     margin: 0 auto;
     position: relative;
     top: 62px;
